# FFR_Eval_MathAI

./: README.md  main.py  pyproject.toml
src/eval/v0.2/: cer_eval_korean.py  sllm_eval_english.py  sllm_eval_korean.py  wer_eval_english.py
